// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSession should create a new session 1`] = `
Session {
  "_accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
        "deviceId": null,
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "email_otp",
        "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
        "scope": Array [
          "default",
          "edit",
          "openid",
        ],
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "email_otp",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_scope": Array [
    "default",
    "edit",
    "openid",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`createSession should create a new session 2`] = `
Object {
  "Authorization::4923fabc-aab2-4804-b92b-2aa96c4999a1": undefined,
}
`;

exports[`createSession should create a new session 3`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [
        Object {
          "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
          "created": 2020-01-01T07:00:00.000Z,
          "deviceId": null,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "session_created",
              "payload": Object {
                "accountId": "be3a62d1-24a0-401c-96dd-3aff95356811",
                "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
                "deviceId": null,
                "expires": 2020-01-01T07:00:00.000Z,
                "grantType": "email_otp",
                "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
                "scope": Array [
                  "default",
                  "edit",
                  "openid",
                ],
              },
            },
          ],
          "expires": 2020-01-01T07:00:00.000Z,
          "grantType": "email_otp",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "refreshId": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "scope": Array [
            "default",
            "edit",
            "openid",
          ],
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
